@@ -1,3 +1,8 @@
+2001-07-20 Kevin Vandersloot <kfv101@psu.edu>
+
+	*proctable.c (get_info): convert the name to utf8 here and
+	don't duplicate the string twice to fix a memory leak
+
 2001-07-19 Kevin Vandersloot <kfv101@psu.edu>
 
 	*proctable.c (refresh_list): remove the call to g_list_copy
